Chromium transform property blurry fixed

--- a/src/sass/blocks/_modal.scss
+++ b/src/sass/blocks/_modal.scss
@@ -2,7 +2,7 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(calc(-50% + 0.5px),calc(-50% + 0.5px));
   z-index: 2;
   
   display: none;
